--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,5 +7,6 @@ requires-python = ">=3.13"
 dependencies = [
     "beautifulsoup4>=4.13.3",
     "discord-py>=2.5.0",
+    "feedparser>=6.0.12",
     "httpx>=0.28.1",
 ]
